# aesthetic-predictor

./: .gitignore  README.md  pyproject.toml
aesthetic_predictor/: __init__.py  libs.py
examples/: example.py  scores.html  scores.template.html
tests/: test_aesthic_predictor.py
